laying out elements

--- a/index.html
+++ b/index.html
@@ -13,21 +13,35 @@
         </div>
         <div class="form-container">
             <p class="para1st">This is not a real online service!
-                You know you need something like this in your life to help you realize your deepest dreams.
+                You know you need something like this in your life to help you realize your deepest dreams.<br>
                 Sign up <em>now</em> to get started!
             </p>
-            <p class="para2nd">You <em>know</em> you want to</p>
+            <p class="para2nd">You <em>know</em> you want to.</p>
             <div class="trial">
+                <p class="para3rd">Let's do this!</p>
                 <form action="">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <button type="submit">Create Account</button>
+                    <div class="flex-container">
+                        <div>
+                            <p class="label">FIRST NAME</p>
+                            <input type="text">
+                            <p class="label">EMAIL</p>
+                            <input type="email">
+                            <p class="label">PASSWORD</p>
+                            <input type="password">
+                        </div>
+                        <div>
+                            <p class="label">LAST NAME</p>
+                            <input type="text">
+                            <p class="label">PHONE NUMBER</p>
+                            <input type="text">
+                            <p class="label">CONFIRM PASSWORD</p>
+                            <input type="password">
+                        </div>
+                    </div>
                 </form>
             </div>
+            <button>Create Account</button>
+            <p>Already have an account? <span>Log in</span></p>
         </div>
     </main>
 </body>
