box-shadows and borders

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div class="image-container">
-            <img class="image" src="sebastian-CxNdzRd1xtY-unsplash.jpg" alt="an image">
+            <img class="image" src="halie-west-25xggax4bSA-unsplash.jpg" alt="an image">
         </div>
         <div class="form-container">
             <p class="para1st">This is not a real online service!
@@ -17,17 +17,17 @@
                 Sign up <em>now</em> to get started!
             </p>
             <p class="para2nd">You <em>know</em> you want to.</p>
-            <div class="trial">
+            <div class="white-container">
                 <p class="para3rd">Let's do this!</p>
                 <form action="">
                     <div class="flex-container">
-                        <div>
+                        <div class="first">
                             <p class="label">FIRST NAME</p>
                             <input type="text">
                             <p class="label">EMAIL</p>
                             <input type="email">
                             <p class="label">PASSWORD</p>
-                            <input type="password">
+                            <input type="password" required>
                         </div>
                         <div>
                             <p class="label">LAST NAME</p>
@@ -35,13 +35,13 @@
                             <p class="label">PHONE NUMBER</p>
                             <input type="text">
                             <p class="label">CONFIRM PASSWORD</p>
-                            <input type="password">
+                            <input type="password" required>
                         </div>
                     </div>
                 </form>
             </div>
             <button>Create Account</button>
-            <p>Already have an account? <span>Log in</span></p>
+            <p class="end-text">Already have an account? <span>Log in</span></p>
         </div>
     </main>
 </body>
